packages/plugin-preview/static/global-components/common/index.scss
:root {
  --rp-preview-button-hover-bg: #e5e6eb;
  --rp-preview-button-bg: #e5e6eb;
}

.dark {
  --rp-preview-button-hover-bg: #c5c5c5;
  --rp-preview-button-bg: #c5c5c5;
}

.rspress-preview {
  padding: 16px 0;

  &-wrapper {
    border: 1px solid #e6e6e6;
    border-radius: var(--rp-radius-small);
  }

  &-card {
    padding: 16px;
    position: relative;
    border: 1px solid #e6e6e6;
    border-radius: var(--rp-radius-small);
    display: flex;
  }

  &-qrcode {
    background-color: #fff;
    width: 120px;
    height: 120px;
    position: absolute;
    top: -132px;
    right: -46px;
    padding: 12px;
  }

  &-code {
    position: relative;
    overflow: hidden;
    flex: 1 1;
    max-height: 700px;
  }

  &-code-hide {
    position: relative;
    overflow: hidden;
    display: none;
  }

  &-code-show {
    margin-top: 16px;
    display: block;
  }

  &-device {
    position: relative;
    flex: 0 0;
    border-left: 1px solid #e6e6e6;
    display: flex;
    flex-direction: column;
    iframe {
      border-bottom: 1px solid #e6e6e6;
      width: 360px;
      height: 100%;
      flex: auto;
    }
  }

  &-operations {
    button {
      width: 28px;
      height: 28px;
      padding: 0;
      text-align: center;
      border-radius: 50%;
      border: 1px solid transparent;
      background-color: var(--rp-c-bg-soft);
      margin-left: 14px;

      &:hover {
        background-color: var(--rp-preview-button-hover-bg);
      }
    }

    svg {
      display: inline-block;
      vertical-align: -2px;
    }

    &.mobile {
      display: flex;
      justify-content: flex-end;
      width: 100%;
      padding: 6px;
    }

    &.web {
      display: flex;
      justify-content: center;
      align-items: center;
      flex: none;
    }
  }
}

